--- a/templates/authentication/account.html
+++ b/templates/authentication/account.html
@@ -1,68 +1,101 @@
+<!DOCTYPE html>
 {% load static %}
-<head>
-    <title>Account</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    {% load static %}
+
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <link rel="stylesheet" 
-          href=
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://kit.fontawesome.com/0a5c0d1ef5.js" crossorigin="anonymous"></script>
 
-</head>
-<body class="depositBody">
-    <header >
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <script
+      src="https://kit.fontawesome.com/0a5c0d1ef5.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <title>Profile</title>
+  </head>
+
+  <body>
+    <header>
       {% if user.is_authenticated %}
-      <div class="headerDivMain" >
 
+      <div class="headerDivMain">
         <div class="logoContainer">
-            <a class="logo"><img src= {% static 'assets/logo.png' %} alt="logo"></a>
-            <i class="fas fa-bars" onclick="toggleMenu()"></i>
+          <a class="logo"
+            ><img src= {% static 'assets/logo.png' %} alt="logo"></a
+          >
+          <i class="fas fa-bars" onclick="toggleMenu()"></i>
         </div>
-
 
         <div class="menuItems" id="menuList">
           <div>
             <nav>
-                <ul class="nav">
-                    <li ><a href="/">Home</a></li>
-                    <li><a href="/terms">Terms</a></li>
-                    <li><a href="/getStarted">Get started</a></li>
-                    <li class="current"><a href="/deposit">Deposit</a></li>
-                    <li><a href="withdraw">Withdraw</a></li>              
-                </ul>
+              <ul class="nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/terms">Terms</a></li>
+                <li><a href="/getStarted">Get started</a></li>
+                <li><a href="/deposit">Deposit</a></li>
+                <li><a href="withdraw">Withdraw</a></li>
+              </ul>
             </nav>
           </div>
 
           <div class="profAndSign">
-            <button id="headerButtons" type="submit"><a href="/account">My profile</a></button>
-            <button id="headerButtons" type="submit"><a href="/signout">Sign out</a></button>
+            <button id="headerButtons" type="submit">
+              <a href="/account">My profile</a>
+            </button>
+            <button id="headerButtons" type="submit">
+              <a href="/signout">Sign out</a>
+            </button>
           </div>
-          
         </div>
+      </div>
 
-
-  </div>
-      
-  {% else %}
-
-      <div class="notButtons" >
-       
-          <button id="headerButtons" type="submit"><a href="/signup">SignUp</a></button>
-          <button id="headerButtons" type="submit"><a href="/signin">SignIn</a></button>
-     
+      %} {% else %}
+      <div class="headerDivMain">
+        <div class="logoContainer">
+          <a class="logo"
+            ><img src= {% static 'assets/logo.png' %} alt="logo"></a
+          >
+          <i class="fas fa-bars" onclick="toggleMenu()"></i>
+        </div>
+        <div class="menuItems" id="menuList">
+          <div class="notButtons">
+            <button id="headerButtons" type="submit">
+              <a href="/signup">SignUp</a>
+            </button>
+            <button id="headerButtons" type="submit">
+              <a href="/signin">SignIn</a>
+            </button>
+          </div>
+        </div>
       </div>
 
       {% endif %}
-  
-
     </header>
-
 
     <!-- Autoscroll links-------------------------------------------------------------- -->
 
-    <section class="autoScroll" data-image-width="1725" data-image-height="1294">
-        <div class="tradingview-widget-container">
-            <div class="tradingview-widget-container__widget"></div>
-            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+    <section
+      class="autoScroll"
+      data-image-width="1725"
+      data-image-height="1294"
+    >
+      <div class="tradingview-widget-container">
+        <div class="tradingview-widget-container__widget"></div>
+        <script
+          type="text/javascript"
+          src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js"
+          async
+        >
             {
             "symbols" [
               {
@@ -92,60 +125,51 @@
             "displayMode"; "adaptive",
             "locale"; "en"
           }
-            </script>
-          </div>
+        </script>
+      </div>
     </section>
 
-
-    {% comment %} Some message {% endcomment %}
-
-    
     {% if user.is_authenticated %}
 
     <section class="depositSection">
-        {% csrf_token %}
-        <div class="accountDetailsContainer">
+      {% csrf_token %}
+      <div class="accountDetailsContainer">
+        <div class="topElementsContainer">
+          <div class="avatarAndNamecontainer">
+            <h1 class="hellowBih">Hello {{user.username}}</h1>
+          </div>
 
-            <div class="topElementsContainer">
-            
-                    <div class="avatarAndNamecontainer">
-                       
-                        <h1 class="hellowBih">Hello {{user.username}}</h1>
-                    </div>
-
-                    <div class="balanceContainer">
-                            <h1 class="grayText" id="currento" >Current balance:  </h1>
-                            <h1 id="balance" onclick="" class="actualBalance"> {{user.last_name}} BTC </h1>
-                    </div>
-                
-            </div>
-
-            <hr class="lineAccount" size="0.5" width="100%" color="gray"> 
-
-            <div class="receiptText">
-                <div class="grayText" >
-                        <p>Name:</p>                
-                        <p>email:</p>
-                </div>
-
-                <div class="attributes">
-                    
-                        <p id="full_name">{{user.first_name}} </p>                      
-                        <p id="email">{{user.email}}</p>
-                </div>
-            </div>
-
-            <div class="logoutAndEditContainer">
-             
-                <button class="profileActionsButton"><a href="/signout">Sign out</a></button>
-                
-            </div>
-            
+          <div class="balanceContainer">
+            <h1 class="grayText" id="currento">Current balance:</h1>
+            <h1 id="balance" onclick="" class="actualBalance">
+              {{user.last_name}} BTC
+            </h1>
+          </div>
         </div>
+
+        <hr class="lineAccount" size="0.5" width="100%" color="gray" />
+
+        <div class="receiptText">
+          <div class="grayText">
+            <p>Name:</p>
+            <p>email:</p>
+          </div>
+
+          <div class="attributes">
+            <p id="full_name">{{user.first_name}}</p>
+            <p id="email">{{user.email}}</p>
+          </div>
+        </div>
+
+        <div class="logoutAndEditContainer">
+          <button class="profileActionsButton">
+            <a href="/signout">Sign out</a>
+          </button>
+        </div>
+      </div>
     </section>
 
     <script>
-        
       database_ref.child("users/" + user.uid).on("value", function (snapshot) {
         document.getElementById("full_name").value = snapshot.val().full_name;
         document.getElementById("email").value = snapshot.val().email;
@@ -154,34 +178,22 @@
     </script>
 
     <script>
-      var menuList=document.getElementById("menuList")
-        menuList.style.maxHeight="0px";
+      var menuList = document.getElementById("menuList");
+      menuList.style.maxHeight = "0px";
 
-        function toggleMenu(){
-          if( menuList.style.maxHeight=="0px"){
-            menuList.style.maxHeight="250px"
-          }
-          else{
-            menuList.style.maxHeight="0px"
-
-          }
-        }       
+      function toggleMenu() {
+        if (menuList.style.maxHeight == "0px") {
+          menuList.style.maxHeight = "450px";
+        } else {
+          menuList.style.maxHeight = "0px";
+        }
+      }
     </script>
 
- 
+    {% else %}
 
+    <h1 id="pleaseSignIn">Please sign in or create account</h1>
 
-
-   
-
-   {% else %}
-   
-   
-      <h1 id="pleaseSignIn" >Please sign in or create account</h1>
-
-
-
-   {% endif %}
-
-</body>
+    {% endif %}
+  </body>
 </html>
