--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -319,13 +319,13 @@
 
                     <div class="iconAndPrising"> 
                         <div class="icons">
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
                             
                         </div>
     
@@ -352,15 +352,15 @@
 
                     <div class="iconAndPrising"> 
                         <div class="icons">
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
+                            <i class="fas fa-check-circle"></i><br>
                             
                         </div>
     
@@ -400,7 +400,7 @@
 
             function toggleMenu(){
               if( menuList.style.maxHeight=="0px"){
-                menuList.style.maxHeight="250px"
+                menuList.style.maxHeight="450px"
               }
               else{
                 menuList.style.maxHeight="0px"
