--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -21,7 +21,7 @@
                 class="alert alert-{{ message.tags }} alert-dismissible fade show"
                 role="alert"
               >
-                <strong>Alert</strong> {{ message }}
+                <strong>Alert !!! </strong> {{ message }}
                 <button
                   type="button"
                   class="close"
