--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,5 +1,7 @@
 body {
   background-image: url("../assets/wall.jpg");
+  margin: 0;
+  padding: 0;
 }
 section {
   display: flex;
@@ -30,16 +32,7 @@ input {
   font-size: 12px;
   margin-bottom: 10px;
 }
-button {
-  border-radius: 10px;
-  height: 40px;
-  padding: 0 10px 0 10px;
-  font-size: 12px;
-  margin-bottom: 10px;
-  width: 175px;
-  background-color: rgb(0, 196, 196);
-  color: white;
-}
+
 .already {
   display: flex;
   flex-direction: row;
@@ -56,14 +49,29 @@ a {
   margin-left: 10px;
 }
 
+.signButton {
+  border-radius: 10px;
+  height: 40px;
+  padding: 0 10px 0 10px;
+  font-size: 12px;
+  margin-bottom: 10px;
+  width: 175px;
+  background-color: rgb(0, 196, 196);
+  color: white;
+}
+.alert-dismissible {
+  color: red;
+  align-items: center;
+}
+
 @media only screen and (max-width: 700px) {
   input {
-    height: 30px;
+    height: 50px;
   }
   button {
-    height: 30px;
+    height: 50px;
   }
   h3 {
-    font-size: 14px;
+    font-size: 24px;
   }
 }
