--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffffff;
+  background-color: #fff6fb;
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(0, 0, 0);
   margin: 0;
@@ -27,7 +27,7 @@ body {
 
 header {
   background-color: rgb(0, 0, 0);
-  height: 70px;
+  height: 80px;
   align-items: center;
   justify-content: space-between;
   display: flex;
@@ -165,29 +165,23 @@ a:visited {
   padding: 30px;
   background-color: white;
   border-radius: 20px;
-  height: 640px;
+  height: 660px;
   width: 300px;
   position: relative;
 }
 .icons {
-  display: flex;
-  flex-direction: column;
-  margin-right: 30px;
-  margin-top: 20px;
+  margin-top: 17px;
 }
 .icons i {
-  margin-bottom: 35px;
+  margin-bottom: 18px;
 }
 .iconAndPrising {
   display: flex;
   flex-direction: row;
-  margin-top: 20px;
   justify-content: center;
+  margin-top: 40px;
 }
-.pricing {
-  display: flex;
-  flex-direction: column;
-}
+
 .investButton {
   position: absolute;
   bottom: 40px;
@@ -333,6 +327,8 @@ footer li {
   align-items: center;
   justify-content: center;
   padding: 70px 0 70px 0;
+  background-image: url("../assets/TRADING3.jpg");
+  height: 100%;
 }
 .payContainer img {
   height: 80px;
@@ -376,13 +372,6 @@ footer li {
   display: none;
   flex-direction: column;
 }
-.mpesa {
-  background-color: #bebebe;
-  height: 100%;
-  width: 30%;
-  border-radius: 20px;
-  padding: 20px;
-}
 
 #result {
   font-weight: 900;
@@ -413,14 +402,11 @@ footer li {
 }
 
 .finishButton {
-  width: 100px;
-  height: 30px;
+  height: 40px;
   border-radius: 10px;
-  background-color: #cc5c00;
+  background-color: #00801c;
   color: white;
-  font-weight: 700;
-  cursor: pointer;
-  font-size: 12px;
+  width: 100%;
 }
 #status {
   text-align: center;
@@ -512,19 +498,23 @@ footer li {
 }
 #greenButton {
   background-color: #00801c;
-  width: 40%;
-}
-.popUpButtonsContainer {
-  display: flex;
-  align-items: center;
-  padding-top: 30px;
-}
-.popUpButtonsContainer input {
-  width: 100%;
+  width: 210px;
   height: 40px;
   border-radius: 10px;
-  margin-bottom: 20px;
-  padding-left: 20px;
+  color: white;
+}
+.mpesa {
+  background-color: #5d6e53;
+  padding: 40px;
+  border-radius: 20px;
+}
+
+.mpesa input {
+  margin-bottom: 10px;
+  border-radius: 10px;
+  font-size: 14px;
+  height: 40px;
+  padding-left: 10px;
 }
 .attributes {
   font-weight: 700;
@@ -535,9 +525,6 @@ footer li {
   border-radius: 10px;
   margin-bottom: 10px;
   padding: 0 20px 0 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .desc {
   font-size: 12px;
@@ -601,7 +588,8 @@ footer li {
   color: #c94000;
   margin-left: 10px;
 }
-.depositButton {
+
+.depositButtonBii {
   width: 100%;
   height: 40px;
   background-color: #1d75e8;
@@ -695,14 +683,17 @@ footer li {
 
   header {
     background-color: rgb(0, 0, 0);
-    height: 50px;
+    height: 80px;
     align-items: center;
     justify-content: space-between;
     display: flex;
   }
+  .fa-bars {
+    font-size: 28px;
+  }
   .logo img {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
   }
   .aboutUs {
     padding: 20px;
@@ -758,7 +749,7 @@ footer li {
     margin-top: 0;
   }
   .customH1 {
-    font-size: 20px;
+    font-size: 24px;
     color: #2c005e;
   }
   .ourServicesTextContainer {
@@ -819,22 +810,34 @@ footer li {
     display: flex;
     align-items: center;
     flex-direction: column;
+    height: 100%;
   }
   .subscriptionsParent {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     margin-top: 50px;
-    align-items: center;
   }
   .sub1 {
-    padding: 20px;
+    padding: 30px;
     background-color: white;
     border-radius: 20px;
-    height: 460px;
-    width: 100%;
+    height: 500px;
+    width: 300px;
     position: relative;
-    margin-bottom: 20px;
+  }
+  .icons {
+    margin-top: 8px;
+  }
+  .icons i {
+    margin-bottom: 17px;
+    font-size: 10px;
+  }
+  .iconAndPrising {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 40px;
   }
   .planHeadText {
     text-align: center;
@@ -843,12 +846,6 @@ footer li {
   }
   .pricing p {
     font-size: 10px;
-  }
-  .icons {
-    display: flex;
-    flex-direction: column;
-    margin-right: 10px;
-    margin-top: 10px;
   }
 
   .investButton {
@@ -859,46 +856,36 @@ footer li {
     height: 40px;
     text-align: center;
     position: absolute;
-    right: 30px;
+    right: 20px;
   }
 
-  .icons i {
-    margin-bottom: 20px;
-    font-size: 12px;
-  }
-  .iconAndPrising {
-    display: flex;
-    flex-direction: row;
-    margin-top: 20px;
-    justify-content: center;
-  }
-  #first {
-    height: 400px;
-  }
+  /* #first {
+    height: 450px;
+  } */
   header .nav a {
     text-decoration: none;
     font-weight: 900;
     color: #ffffff;
-    font-size: 10px;
+    font-size: 20px;
   }
   header li {
     color: white;
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
   }
   .menuItems {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 50px;
     position: absolute;
     right: 0px;
     z-index: 2;
     top: 30px;
-    background-color: #5f5f5f;
-    width: 70%;
-    border-radius: 0 0 10px 10px;
-    height: 250px;
+    background-color: #000000;
+    width: 100%;
+    border-radius: 0 0 20px 20px;
+    height: 450px;
   }
   .logoContainer {
     display: flex;
@@ -922,28 +909,32 @@ footer li {
     padding: 10px;
     border-radius: 10px;
     text-decoration: none;
-    font-size: 8px;
+    font-size: 14px;
     font-weight: 700;
+    margin: 20px;
+    height: 40px;
+    width: 100px;
   }
 
   .profAndSign {
     display: flex;
     flex-direction: row;
     position: absolute;
-    bottom: 10px;
+    bottom: 20px;
+    justify-content: space-between;
   }
   .termsSection li {
-    font-size: 12px;
+    font-size: 16px;
   }
   .termsSection {
     padding: 5px;
   }
   .termsSection h1 {
-    font-size: 14px;
+    font-size: 26px;
   }
   .majorWithdrawConatiner {
     background-color: #ffffff;
-    width: 100%;
+    width: 500px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -954,20 +945,15 @@ footer li {
     font-weight: 700;
   }
   .actualBalance {
-    font-size: 8px;
+    font-size: 20px;
     text-align: center;
     margin-left: 8px;
   }
   .wihdrawContainer input {
-    height: 30px;
+    height: 40px;
     border-radius: 10px;
     margin-bottom: 10px;
     padding: 0 20px 0 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    font-size: 10px;
   }
   .desc {
     font-size: 8px;
@@ -979,15 +965,19 @@ footer li {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    padding: 10px 0 10px 0;
+    padding: 70px 0 70px 0;
+    background-image: url("../assets/TRADING3.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
   }
   #greenButton {
     background-color: #00801c;
-    width: 100%;
-    margin-top: 0;
-    font-size: 8px;
-    height: 30px;
+    width: 210px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
   }
   .topElementsContainer {
     display: flex;
@@ -996,15 +986,19 @@ footer li {
     align-items: center;
   }
   .mpesa {
-    background-color: #bebebe;
-    height: 100%;
-    width: 100%;
+    background-color: #5d6e53;
+    padding: 40px;
     border-radius: 20px;
-    padding: 20px;
   }
+
   .mpesa input {
-    font-size: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    font-size: 14px;
+    height: 40px;
+    padding-left: 10px;
   }
+
   .headerDivMain {
     display: flex;
     align-items: center;
@@ -1023,7 +1017,7 @@ footer li {
     padding: 20px 20px 40px 20px;
   }
   .sefferCont input {
-    height: 30px;
+    height: 40px;
     border-radius: 10px;
     margin-bottom: 10px;
     display: flex;
@@ -1041,33 +1035,33 @@ footer li {
     font-size: 14px;
     margin-bottom: 0;
   }
-  /* .depositButton {
+  .depositButton {
     height: 40px;
     background-color: #1d75e8;
     color: white;
     font-size: 12px;
     font-weight: 700;
     border-radius: 10px;
-  } */
+    width: 100%;
+  }
 
   .popUpWindow {
     background-color: #bebebe;
-    height: 300px;
-    width: 100px;
+    height: 350px;
+    width: 100%;
     border-radius: 20px;
-    padding: 40px;
+    padding: 20px;
     display: none;
-    position: absolute;
     flex-direction: column;
+    position: absolute;
   }
   .request {
     font-size: 10px;
     text-align: center;
   }
   .address {
-    font-size: 8px;
+    font-size: 14px;
     text-align: center;
-    flex-wrap: wrap;
   }
   .note {
     font-size: 8px;
@@ -1080,7 +1074,7 @@ footer li {
     font-weight: bold;
   }
   .hellowBih {
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 700;
   }
   .accountDetailsContainer {
@@ -1089,28 +1083,27 @@ footer li {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
-    padding: 10px 20px 0 10px;
-    height: 200px;
+    height: 300px;
+    margin-top: 0;
   }
   .grayText p {
     color: gray;
-    font-size: 8px;
+    font-size: 18px;
   }
   .balance {
-    font-size: 8px;
+    font-size: 18px;
   }
   .attributes {
     margin-left: 8px;
   }
   .attributes p {
-    font-size: 8px;
+    font-size: 18px;
   }
   #currento {
-    font-size: 8px;
+    font-size: 18px;
   }
   .balanceContainer h1 {
-    font-size: 8px;
+    font-size: 18px;
   }
   .logoutAndEditContainer {
     display: flex;
@@ -1131,12 +1124,22 @@ footer li {
   }
   .notButtons {
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 20px;
+    position: absolute;
+    bottom: 20px;
   }
-
-  .notButtons button {
-    margin: 20px;
+  .wihdrawContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .depositButtonBii {
+    width: 100%;
+    height: 40px;
+    background-color: #1d75e8;
+    color: white;
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 10px;
   }
 }
