--- a/templates/authentication/deposit.html
+++ b/templates/authentication/deposit.html
@@ -1,67 +1,101 @@
 <!DOCTYPE html>
 {% load static %}
-<head>
-    <title>Deposit</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    {% load static %}
+
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <link rel="stylesheet" 
-          href=
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://kit.fontawesome.com/0a5c0d1ef5.js" crossorigin="anonymous"></script>
-</head>
-<body  class="depositBody">
-    <header >
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <script
+      src="https://kit.fontawesome.com/0a5c0d1ef5.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <title>Fx Binary || Home page</title>
+  </head>
+
+  <body>
+    <header>
       {% if user.is_authenticated %}
-      <div class="headerDivMain" >
 
+      <div class="headerDivMain">
         <div class="logoContainer">
-            <a class="logo"><img src= {% static 'assets/logo.png' %} alt="logo"></a>
-            <i class="fas fa-bars" onclick="toggleMenu()"></i>
+          <a class="logo"
+            ><img src= {% static 'assets/logo.png' %} alt="logo"></a
+          >
+          <i class="fas fa-bars" onclick="toggleMenu()"></i>
         </div>
-
 
         <div class="menuItems" id="menuList">
           <div>
             <nav>
-                <ul class="nav">
-                    <li ><a href="/">Home</a></li>
-                    <li><a href="/terms">Terms</a></li>
-                    <li><a href="/getStarted">Get started</a></li>
-                    <li class="current"><a href="/deposit">Deposit</a></li>
-                    <li><a href="withdraw">Withdraw</a></li>              
-                </ul>
+              <ul class="nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/terms">Terms</a></li>
+                <li><a href="/getStarted">Get started</a></li>
+                <li class="current"><a href="/deposit">Deposit</a></li>
+                <li><a href="withdraw">Withdraw</a></li>
+              </ul>
             </nav>
           </div>
 
           <div class="profAndSign">
-            <button id="headerButtons" type="submit"><a href="/account">My profile</a></button>
-            <button id="headerButtons" type="submit"><a href="/signout">Sign out</a></button>
+            <button id="headerButtons" type="submit">
+              <a href="/account">My profile</a>
+            </button>
+            <button id="headerButtons" type="submit">
+              <a href="/signout">Sign out</a>
+            </button>
           </div>
-          
         </div>
+      </div>
 
-
-  </div>
-      
-      {% else %}
-
-      <div class="notButtons" >
-       
-          <button id="headerButtons" type="submit"><a href="/signup">SignUp</a></button>
-          <button id="headerButtons" type="submit"><a href="/signin">SignIn</a></button>
-     
+      %} {% else %}
+      <div class="headerDivMain">
+        <div class="logoContainer">
+          <a class="logo"
+            ><img src= {% static 'assets/logo.png' %} alt="logo"></a
+          >
+          <i class="fas fa-bars" onclick="toggleMenu()"></i>
+        </div>
+        <div class="menuItems" id="menuList">
+          <div class="notButtons">
+            <button id="headerButtons" type="submit">
+              <a href="/signup">SignUp</a>
+            </button>
+            <button id="headerButtons" type="submit">
+              <a href="/signin">SignIn</a>
+            </button>
+          </div>
+        </div>
       </div>
 
       {% endif %}
-
     </header>
 
+    <!-- Autoscroll links-------------------------------------------------------------- -->
 
-  
-
-    <section class="autoScroll" data-image-width="1725" data-image-height="1294">
-        <div class="tradingview-widget-container">
-            <div class="tradingview-widget-container__widget"></div>
-            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+    <section
+      class="autoScroll"
+      data-image-width="1725"
+      data-image-height="1294"
+    >
+      <div class="tradingview-widget-container">
+        <div class="tradingview-widget-container__widget"></div>
+        <script
+          type="text/javascript"
+          src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js"
+          async
+        >
             {
             "symbols" [
               {
@@ -91,99 +125,112 @@
             "displayMode"; "adaptive",
             "locale"; "en"
           }
-            </script>
-          </div>
+        </script>
+      </div>
     </section>
-
 
     {% if user.is_authenticated %}
 
     <section class="depositSection">
-        <div class="payContainer" id="submitForm">
-           
-            <img src= {% static 'assets/bitcoinlogo.png' %}>
-            <h3 class="payWith">Pay with bitcoin</h3>
-         
-          
-            <div class="sefferCont">
-              {% if sender_email %}
-              
-              <p class="suc">Please click on finish to complete the transaction</p>
-             
-              <button class="sucButton" onclick="openForm()">Finish</button>
-              {% else %}
+      <div class="payContainer" id="submitForm">
+        <img src= {% static 'assets/bitcoinlogo.png' %}>
+        <h3 class="payWith">Pay with bitcoin</h3>
 
-              <form method="post" action="{% url 'deposit' %}"  >   
-                {% csrf_token %} 
-                <input  type="email" name="email" id="email" placeholder="Enter your email adress" required> 
-                <input  type="number" name="amount" id="usd" placeholder="Enter amount(USD)"required> 
-                <input  class="depositButton" type="submit">        
-              </form>
-              {% endif %}      
-            </div>
-   
-        </div> 
+        <div class="sefferCont">
+          {% if sender_email %}
 
-        {% comment %} <!-- pop up--------------------------------- --> {% endcomment %}
+          <p class="suc">Please click on finish to complete the transaction</p>
 
+          <button class="sucButton" onclick="openForm()">Finish</button>
+          {% else %}
 
-        <div class="popUpWindow" id="myForm">
-              <div>
-                
-                <p class="request">Please send <span id="result"></span> BTC to the following address:</p>
-                <hr  size="0.5" width="90%" color="gray">  
-                <h3 class="address">bc1q76ch8puqg45w9<br>wpgcz5ethvlfakmjyas78yhcr</h3>
-                <hr  size="0.5" width="90%" color="gray"> 
-
-              </div>
-
-              <div>
-                <p class="note">Note: After making the payment, wait for at least 1hr to process your payment <br>
-                    click on "Close" after paying
-                </p>
-              </div>
-           
-
-            <div class="popUpButtonsContainer">
-               <button id="close" class="finishButton" type="submit" onclick="closeForm()">Close</button>
-            </div> 
-          
+          <form method="post" action="{% url 'deposit' %}">
+            {% csrf_token %}
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Enter your email adress"
+              required
+            />
+            <input
+              type="number"
+              name="amount"
+              id="usd"
+              placeholder="Enter amount(USD)"
+              required
+            />
+            <input class="depositButton" type="submit" />
+          </form>
+          {% endif %}
         </div>
-        
-        <script>
-          function openForm() {
-            document.getElementById("myForm").style.display = "flex";
-            var num1={{amount_usd}};
-            var num2="0.000023";
-            document.getElementById('result').innerHTML=(num1*num2);
-          }
+      </div>
 
-          function closeForm() {
-            document.getElementById("myForm").style.display = "none";
-            document.getElementById("submitForm").style.display = "flex";
-            window.location.replace("/deposit");
-            
+      {% comment %}
+      <!-- pop up--------------------------------- -->
+      {% endcomment %}
+
+      <div class="popUpWindow" id="myForm">
+        <div>
+          <p class="request">
+            Please send <span id="result"></span> BTC to the following address:
+          </p>
+          <hr size="0.5" width="90%" color="gray" />
+          <h3 class="address">bc1q76ch8puqg45w9wpgcz5ethvlfakmjyas78yhcr</h3>
+          <hr size="0.5" width="90%" color="gray" />
+        </div>
+
+        <div>
+          <p class="note">
+            Note: After making the payment, wait for at least 1hr to process
+            your payment <br />
+            click on "Close" after paying
+          </p>
+        </div>
+
+        <div class="popUpButtonsContainer">
+          <button
+            id="close"
+            class="finishButton"
+            type="submit"
+            onclick="closeForm()"
+          >
+            Close
+          </button>
+        </div>
+      </div>
+
+      <script>
+        function openForm() {
+          document.getElementById("myForm").style.display = "flex";
+          var num1={{amount_usd}};
+          var num2="0.000023";
+          document.getElementById('result').innerHTML=(num1*num2);
+        }
+
+        function closeForm() {
+          document.getElementById("myForm").style.display = "none";
+          document.getElementById("submitForm").style.display = "flex";
+          window.location.replace("/deposit");
+
+        }
+      </script>
+      <script>
+        var menuList = document.getElementById("menuList");
+        menuList.style.maxHeight = "0px";
+
+        function toggleMenu() {
+          if (menuList.style.maxHeight == "0px") {
+            menuList.style.maxHeight = "450px";
+          } else {
+            menuList.style.maxHeight = "0px";
           }
-          
-          </script>
-          <script>
-            var menuList=document.getElementById("menuList")
-              menuList.style.maxHeight="0px";
-  
-              function toggleMenu(){
-                if( menuList.style.maxHeight=="0px"){
-                  menuList.style.maxHeight="250px"
-                }
-                else{
-                  menuList.style.maxHeight="0px"
-  
-                }
-              }       
-          </script>
+        }
+      </script>
     </section>
 
-   {% else %}  
-      <h1 id="pleaseSignIn" >Please sign in or create account</h1>
-   {% endif %}
-</body>
+    {% else %}
+    <h1 id="pleaseSignIn">Please sign in or create account</h1>
+    {% endif %}
+  </body>
 </html>
