--- a/templates/authentication/getStarted.html
+++ b/templates/authentication/getStarted.html
@@ -1,71 +1,101 @@
+<!DOCTYPE html>
 {% load static %}
-<head>
-    <title>Get started</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    {% load static %}
+
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <link rel="stylesheet" 
-          href=
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<script src="https://kit.fontawesome.com/0a5c0d1ef5.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
+    <script
+      src="https://kit.fontawesome.com/0a5c0d1ef5.js"
+      crossorigin="anonymous"
+    ></script>
 
-</head>
-<body class="depositBody">
-    <header >
-        {% if user.is_authenticated %}
-       
-      <div class="headerDivMain" >
+    <title>Fx Binary || Home page</title>
+  </head>
 
+  <body>
+    <header>
+      {% if user.is_authenticated %}
+
+      <div class="headerDivMain">
         <div class="logoContainer">
-            <a class="logo"><img src= {% static 'assets/logo.png' %} alt="logo"></a>
-            <i class="fas fa-bars" onclick="toggleMenu()"></i>
+          <a class="logo"
+            ><img src= {% static 'assets/logo.png' %} alt="logo"></a
+          >
+          <i class="fas fa-bars" onclick="toggleMenu()"></i>
         </div>
-
 
         <div class="menuItems" id="menuList">
           <div>
             <nav>
-                <ul class="nav">
-                    <li ><a href="/">Home</a></li>
-                    <li><a href="/terms">Terms</a></li>
-                    <li class="current"><a href="/getStarted">Get started</a></li>
-                    <li><a href="/deposit">Deposit</a></li>
-                    <li><a href="withdraw">Withdraw</a></li>              
-                </ul>
+              <ul class="nav">
+                <li class="current"><a href="/">Home</a></li>
+                <li><a href="/terms">Terms</a></li>
+                <li><a href="/getStarted">Get started</a></li>
+                <li><a href="/deposit">Deposit</a></li>
+                <li><a href="withdraw">Withdraw</a></li>
+              </ul>
             </nav>
           </div>
 
           <div class="profAndSign">
-            <button id="headerButtons" type="submit"><a href="/account">My profile</a></button>
-            <button id="headerButtons" type="submit"><a href="/signout">Sign out</a></button>
+            <button id="headerButtons" type="submit">
+              <a href="/account">My profile</a>
+            </button>
+            <button id="headerButtons" type="submit">
+              <a href="/signout">Sign out</a>
+            </button>
           </div>
-          
         </div>
+      </div>
 
-
-  </div>
-
-      {% else %}
-
-      <div class="notButtons" >
-       
-          <button id="headerButtons" type="submit"><a href="/signup">SignUp</a></button>
-          <button id="headerButtons" type="submit"><a href="/signin">SignIn</a></button>
-     
+      %} {% else %}
+      <div class="headerDivMain">
+        <div class="logoContainer">
+          <a class="logo"
+            ><img src= {% static 'assets/logo.png' %} alt="logo"></a
+          >
+          <i class="fas fa-bars" onclick="toggleMenu()"></i>
+        </div>
+        <div class="menuItems" id="menuList">
+          <div class="notButtons">
+            <button id="headerButtons" type="submit">
+              <a href="/signup">SignUp</a>
+            </button>
+            <button id="headerButtons" type="submit">
+              <a href="/signin">SignIn</a>
+            </button>
+          </div>
+        </div>
       </div>
 
       {% endif %}
-      
-
     </header>
-
 
     <!-- Autoscroll links-------------------------------------------------------------- -->
 
-    <section class="autoScroll" data-image-width="1725" data-image-height="1294">
-        <div class="tradingview-widget-container">
-            <div class="tradingview-widget-container__widget"></div>
-            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+    <section
+      class="autoScroll"
+      data-image-width="1725"
+      data-image-height="1294"
+    >
+      <div class="tradingview-widget-container">
+        <div class="tradingview-widget-container__widget"></div>
+        <script
+          type="text/javascript"
+          src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js"
+          async
+        >
             {
             "symbols" [
               {
@@ -95,119 +125,114 @@
             "displayMode"; "adaptive",
             "locale"; "en"
           }
-            </script>
-          </div>
+        </script>
+      </div>
     </section>
 
-
-   
-
-    
-    <!-- Investment plan---------------------------------------------------------------------------------- -->
+    <!-- Investment plan--------------------------------------------------------- -->
 
     <section class="investmentContainer">
+      <h1 class="investmentTit">Our Investment Plans</h1>
+      <p class="investmentDesc">
+        We are a responsible firm that enhances your investments by using modern
+        technology and continuous monitoring of markets by our experts.
+      </p>
+      <p class="investmentPlanText">Choose an investment plan :</p>
 
-        <h1 class="investmentTit" >Our Investment Plans</h1>
-            <p class="investmentDesc">We are a responsible firm that enhances your investments
-              by using modern technology and continuous monitoring of markets
-              by our experts.
-            </p>
-            <p class="investmentPlanText">Choose an investment plan :</p>
-  
-  
-  
-  
-  
-    
-            <div class="subscriptionsParent">
-    
-                  <div class="sub1">
-                    
-                      <h1 class="planHeadText">2 Hour plan</h1>
-                      <hr class="line" size="0.5" width="10%" color="gray">  
-  
-                      <div class="iconAndPrising"> 
-                          <div class="icons">
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              
-                          </div>
-      
-                          <div class="pricing">
-                              <p>Invest $100 Earn $150 </p>
-                              <p>Invest $250 Earn $375</p>
-                              <p>Invest $300 Earn $450</p>
-                              <p>Invest $400 Earn $600</p>
-                              <p>Invest $500 Earn $750</p>
-                              <p>Invest $1000 Earn $1500</p>
-                              <p>Invest $2000 Earn $3000</p>
-                          </div>                      
-                      </div>
-                      <button id="goToPaymentButton" onclick="goToDeposit()"  class="investButton">Invest now</button>
-                  </div>
-  
-  
-  
-  
-                  <div class="sub1">
-                    
-                      <h1 class="planHeadText">24 Hour plan</h1>
-                      <hr class="line" size="0.5" width="10%" color="gray">  
-  
-                      <div class="iconAndPrising"> 
-                          <div class="icons">
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              <i class="fas fa-check-circle"></i>
-                              
-                          </div>
-      
-                          <div class="pricing">
-                              <p>Invest $500 Earn $1500 (Min) </p>
-                              <p>Invest $600 Earn $1800</p>
-                              <p>Invest $700 Earn $2100</p>
-                              <p>Invest $800 Earn $2400</p>
-                              <p>Invest $900 Earn $2700</p>
-                              <p>Invest $1000 Earn $3000</p>
-                              <p>Invest $2000 Earn $6000</p>
-                              <p>Invest $10000 Earn $16000</p>
-                              <p>Invest $20000 Earn $33000</p>
-                          </div>
-  
-                      </div>  
-                      <button id="goToPaymentButton" onclick="goToDeposit()"  class="investButton">Invest now</button>
-                  </div>
-  
-              </div>       
-                           
-        </section>
+      <div class="subscriptionsParent">
+        <div class="sub1" id="first">
+          <h1 class="planHeadText">2 Hour plan</h1>
+          <hr class="line" size="0.5" width="10%" color="gray" />
 
-        <script>
+          <div class="iconAndPrising">
+            <div class="icons">
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+            </div>
 
-          var menuList=document.getElementById("menuList")
-            menuList.style.maxHeight="0px";
+            <div class="pricing">
+              <p>Invest $100 Earn $150</p>
+              <p>Invest $250 Earn $375</p>
+              <p>Invest $300 Earn $450</p>
+              <p>Invest $400 Earn $600</p>
+              <p>Invest $500 Earn $750</p>
+              <p>Invest $1000 Earn $1500</p>
+              <p>Invest $2000 Earn $3000</p>
+            </div>
+          </div>
+          <button
+            id="goToPaymentButton"
+            onclick="goToDeposit()"
+            class="investButton"
+          >
+            Invest now
+          </button>
+        </div>
 
-            function toggleMenu(){
-              if( menuList.style.maxHeight=="0px"){
-                menuList.style.maxHeight="250px"
-              }
-              else{
-                menuList.style.maxHeight="0px"
+        <div class="sub1">
+          <h1 class="planHeadText">24 Hour plan</h1>
+          <hr class="line" size="0.5" width="10%" color="gray" />
 
-              }
-            }
-      </script>
+          <div class="iconAndPrising">
+            <div class="icons">
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+              <i class="fas fa-check-circle"></i><br />
+            </div>
 
-</body>
+            <div class="pricing">
+              <p>Invest $500 Earn $1500 (Min)</p>
+              <p>Invest $600 Earn $1800</p>
+              <p>Invest $700 Earn $2100</p>
+              <p>Invest $800 Earn $2400</p>
+              <p>Invest $900 Earn $2700</p>
+              <p>Invest $1000 Earn $3000</p>
+              <p>Invest $2000 Earn $6000</p>
+              <p>Invest $10000 Earn $16000</p>
+              <p>Invest $20000 Earn $33000</p>
+            </div>
+          </div>
+          <button
+            id="goToPaymentButton"
+            onclick="goToDeposit()"
+            class="investButton"
+          >
+            Invest now
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <script>
+      function goToDeposit() {
+        window.location = "/deposit";
+      }
+
+      function goToGetStarted() {
+        window.location = "/getStarted";
+      }
+
+      var menuList = document.getElementById("menuList");
+      menuList.style.maxHeight = "0px";
+
+      function toggleMenu() {
+        if (menuList.style.maxHeight == "0px") {
+          menuList.style.maxHeight = "450px";
+        } else {
+          menuList.style.maxHeight = "0px";
+        }
+      }
+    </script>
+  </body>
 </html>
