--- a/templates/authentication/signin.html
+++ b/templates/authentication/signin.html
@@ -26,7 +26,7 @@
                       class="alert alert-{{ message.tags }} alert-dismissible fade show"
                       role="alert"
                     >
-                      <strong>Alert</strong> {{ message }}
+                      <strong>Alert !!! </strong> {{ message }}
                       <button
                         type="button"
                         class="close"
@@ -70,7 +70,7 @@
                 
                  
                
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="signButton ">Login</button>
                 <div class="already">
                   <P>Don't have an account?<p/>
                   <a href="/signup">Signup</a>
