--- a/templates/authentication/withdraw.html
+++ b/templates/authentication/withdraw.html
@@ -1,70 +1,101 @@
+<!DOCTYPE html>
 {% load static %}
-<head>
-    <title>Withdraw</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    {% load static %}
+
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <link rel="stylesheet" 
-          href=
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://kit.fontawesome.com/0a5c0d1ef5.js" crossorigin="anonymous"></script>
-</head>
-<body class="depositBody">
-    <header >
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <script
+      src="https://kit.fontawesome.com/0a5c0d1ef5.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <title>Fx Binary || Home page</title>
+  </head>
+
+  <body>
+    <header>
       {% if user.is_authenticated %}
-      <div class="headerDivMain" >
 
+      <div class="headerDivMain">
         <div class="logoContainer">
-            <a class="logo"><img src= {% static 'assets/logo.png' %} alt="logo"></a>
-            <i class="fas fa-bars" onclick="toggleMenu()"></i>
+          <a class="logo"
+            ><img src= {% static 'assets/logo.png' %} alt="logo"></a
+          >
+          <i class="fas fa-bars" onclick="toggleMenu()"></i>
         </div>
-
 
         <div class="menuItems" id="menuList">
           <div>
             <nav>
-                <ul class="nav">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/terms">Terms</a></li>
-                    <li><a href="/getStarted">Get started</a></li>
-                    <li><a href="/deposit">Deposit</a></li>
-                    <li class="current"><a href="withdraw">Withdraw</a></li>              
-                </ul>
+              <ul class="nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/terms">Terms</a></li>
+                <li><a href="/getStarted">Get started</a></li>
+                <li><a href="/deposit">Deposit</a></li>
+                <li class="current"><a href="withdraw">Withdraw</a></li>
+              </ul>
             </nav>
           </div>
 
           <div class="profAndSign">
-            <button id="headerButtons" type="submit"><a href="/account">My profile</a></button>
-            <button id="headerButtons" type="submit"><a href="/signout">Sign out</a></button>
+            <button id="headerButtons" type="submit">
+              <a href="/account">My profile</a>
+            </button>
+            <button id="headerButtons" type="submit">
+              <a href="/signout">Sign out</a>
+            </button>
           </div>
-          
         </div>
+      </div>
 
+      %} {% else %}
+      <div class="headerDivMain">
+        <div class="logoContainer">
+          <a class="logo"
+            ><img src= {% static 'assets/logo.png' %} alt="logo"></a
+          >
+          <i class="fas fa-bars" onclick="toggleMenu()"></i>
+        </div>
+        <div class="menuItems" id="menuList">
+          <div class="notButtons">
+            <button id="headerButtons" type="submit">
+              <a href="/signup">SignUp</a>
+            </button>
+            <button id="headerButtons" type="submit">
+              <a href="/signin">SignIn</a>
+            </button>
+          </div>
+        </div>
+      </div>
 
-  </div>
-    
-    {% else %}
-
-    <div class="notButtons" >
-     
-        <button id="headerButtons" type="submit"><a href="/signup">SignUp</a></button>
-        <button id="headerButtons" type="submit"><a href="/signin">SignIn</a></button>
-   
-    </div>
-
-    {% endif %}
-
-      
-
+      {% endif %}
     </header>
-
-    </header>
-
 
     <!-- Autoscroll links-------------------------------------------------------------- -->
 
-    <section class="autoScroll" data-image-width="1725" data-image-height="1294">
-        <div class="tradingview-widget-container">
-            <div class="tradingview-widget-container__widget"></div>
-            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+    <section
+      class="autoScroll"
+      data-image-width="1725"
+      data-image-height="1294"
+    >
+      <div class="tradingview-widget-container">
+        <div class="tradingview-widget-container__widget"></div>
+        <script
+          type="text/javascript"
+          src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js"
+          async
+        >
             {
             "symbols" [
               {
@@ -94,101 +125,101 @@
             "displayMode"; "adaptive",
             "locale"; "en"
           }
-            </script>
-          </div>
+        </script>
+      </div>
     </section>
 
     {% if user.is_authenticated %}
 
     <section class="depositSection">
+      {% if sender_email %}
 
-                    
-                    {% if sender_email %}
+      <div class="majorWithdrawConatiner">
+        <div class="topElementsContainer">
+          <div class="avatarAndNamecontainer">
+            <h1 class="avail">Submited successfully</h1>
+          </div>
+        </div>
 
-                    <div class="majorWithdrawConatiner">
+        <hr class="lineBefore" size="0.5" width="100%" color="gray" />
+      </div>
 
-                      <div class="topElementsContainer">
-                
-                          <div class="avatarAndNamecontainer">
-                              <h1  class="avail">Submited successfully</h1>
-                          </div>
+      {% else %}
 
-                              
-                      </div>
+      <div class="majorWithdrawConatiner">
+        <div class="topElementsContainer">
+          <div class="avatarAndNamecontainer">
+            <h1 class="avail">Available balance</h1>
+          </div>
 
-                      <hr class="lineBefore" size="0.5" width="100%" color="gray"> 
-                    </div>
+          <div class="balanceContainer">
+            <p class="actualBalance">{{user.last_name}} BTC</p>
+          </div>
+        </div>
 
+        <hr class="lineBefore" size="0.5" width="100%" color="gray" />
 
-                          {% else %}
+        <div class="wihdrawContainer">
+          <form method="post" action="">
+            {% csrf_token %}
+            <input
+              type="email"
+              name="btcEmail"
+              placeholder="Enter your email adress"
+              required
+            />
+            <br />
+            <input
+              type="number"
+              name="amountUSD"
+              id="amountUSD"
+              placeholder="Enter amount(USD)"
+              required
+            /><br />
+            <input
+              type="text"
+              name="btcAddress"
+              id="btcAddress"
+              placeholder="Enter BTC adddress"
+              required
+            /><br />
+            <input type="submit" class="depositButtonBii" /><br />
+          </form>
+          <button id="greenButton" onclick="openForm()">
+            M-Pesa withdrawal</button
+          ><br />
+        </div>
 
+        <p class="desc">
+          All transactions are secure and confidential. Please give up to 24hrs
+          to process your request. <br />
+          Keep checking your email for confirmation
+        </p>
+      </div>
 
-                      <div class="majorWithdrawConatiner">
+      {% endif %}
 
-                        <div class="topElementsContainer">
-
-                            <div class="avatarAndNamecontainer">
-                                <h1 class="avail">Available balance</h1>
-                            </div>
-
-                            <div class="balanceContainer">
-                              <p class="actualBalance">{{user.last_name}} BTC</p>
-                              
-                            </div>     
-                        </div>
-
-                        <hr class="lineBefore" size="0.5" width="100%" color="gray"> 
-
-                      <div class="wihdrawContainer">
-                      <form method="post" action="" >   
-                      {% csrf_token %} 
-                            <input  type="email" name="btcEmail"  placeholder="Enter your email adress" required> 
-                            <input  type="number" name="amountUSD" id="amountUSD" placeholder="Enter amount(USD)"required> 
-                            <input  type="text" name="btcAddress" id="btcAddress" placeholder="Enter BTC adddress"required> 
-                            <input type="submit" class="depositButton" >
-                      </form>
-                      <button id="greenButton" class="depositButton" onclick="openForm()" >M-Pesa withdrawal</button>
-                      </div>
-
-
-                      <p class="desc">All transactions are secure and confidential.
-                      Please give up to 24hrs to process your request. <br> 
-                      Keep checking your email for confirmation</p>   
-                      </div>
-
-
-                   {% endif %}
-        
-
-  <script>
-    function openForm() {
-      
-      window.location.replace("/mpesaWithdrawal");      
-    }   
-  </script>
-
-  <script>
-
-    var menuList=document.getElementById("menuList")
-      menuList.style.maxHeight="0px";
-
-      function toggleMenu(){
-        if( menuList.style.maxHeight=="0px"){
-          menuList.style.maxHeight="250px"
+      <script>
+        function openForm() {
+          window.location.replace("/mpesaWithdrawal");
         }
-        else{
-          menuList.style.maxHeight="0px"
+      </script>
 
+      <script>
+        var menuList = document.getElementById("menuList");
+        menuList.style.maxHeight = "0px";
+
+        function toggleMenu() {
+          if (menuList.style.maxHeight == "0px") {
+            menuList.style.maxHeight = "450px";
+          } else {
+            menuList.style.maxHeight = "0px";
+          }
         }
-      }
-</script>
-
-
-  </section>
-    {% else %}  
-      <h1 id="pleaseSignIn" >Please sign in or create account</h1>
+      </script>
+    </section>
+    {% else %}
+    <h1 id="pleaseSignIn">Please sign in or create account</h1>
     {% endif %}
-
-
-</body>
+  </body>
 </html>
