--- a/templates/authentication/signin.html
+++ b/templates/authentication/signin.html
@@ -75,6 +75,10 @@
                   <P>Don't have an account?<p/>
                   <a href="/signup">Signup</a>
                 </div>
+                <div class="already">
+                  <P>Forgot password/username?<p/>
+                  <a href="/reset_password">Reset !</a>
+                </div>
               </div>
               </form>
             </div>
