--- a/templates/authentication/getStarted.html
+++ b/templates/authentication/getStarted.html
@@ -140,78 +140,109 @@
       <p class="investmentPlanText">Choose an investment plan :</p>
 
       <div class="subscriptionsParent">
+  
         <div class="sub1" id="first">
-          <h1 class="planHeadText">2 Hour plan</h1>
-          <hr class="line" size="0.5" width="10%" color="gray" />
+          
+            <h1 class="planHeadText">2 Hour plan</h1>
+            <hr class="line" size="0.5" width="10%" color="gray">  
 
-          <div class="iconAndPrising">
-            <div class="icons">
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
+          
+              <div class="icons">
+                <div>
+                  <ul>
+                    <li>
+                      <p>Invest $100 Earn $150 </p> 
+                    </li>
+                    <li>
+                      <p>Invest $250 Earn $375</p>                    
+                    </li>
+                    <li>
+                      <p>Invest $300 Earn $450</p>               
+                    </li>
+                    <li>
+                      <p>Invest $400 Earn $600</p>
+                    </li>
+                    <li>
+                      <p>Invest $500 Earn $750</p>
+                    </li>
+                    <li>
+                      <p>Invest $1000 Earn $1500</p>
+                    </li>
+                    <li>
+                      <p>Invest $2000 Earn $3000</p>
+                    </li>
+                  </ul>                   
+                                    
+                                            
+                                                 
+                   
+                   
+                    
+                   
+                </div>                              
             </div>
 
-            <div class="pricing">
-              <p>Invest $100 Earn $150</p>
-              <p>Invest $250 Earn $375</p>
-              <p>Invest $300 Earn $450</p>
-              <p>Invest $400 Earn $600</p>
-              <p>Invest $500 Earn $750</p>
-              <p>Invest $1000 Earn $1500</p>
-              <p>Invest $2000 Earn $3000</p>
-            </div>
-          </div>
-          <button
-            id="goToPaymentButton"
-            onclick="goToDeposit()"
-            class="investButton"
-          >
-            Invest now
-          </button>
+            <button id="goToPaymentButton" onclick="goToDeposit()"  class="investButton">Invest now</button>
         </div>
+
+
+
 
         <div class="sub1">
-          <h1 class="planHeadText">24 Hour plan</h1>
-          <hr class="line" size="0.5" width="10%" color="gray" />
+          
+            <h1 class="planHeadText">24 Hour plan</h1>
+            <hr class="line" size="0.5" width="10%" color="gray">  
 
-          <div class="iconAndPrising">
-            <div class="icons">
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-              <i class="fas fa-check-circle"></i><br />
-            </div>
+       
+               
 
-            <div class="pricing">
-              <p>Invest $500 Earn $1500 (Min)</p>
-              <p>Invest $600 Earn $1800</p>
-              <p>Invest $700 Earn $2100</p>
-              <p>Invest $800 Earn $2400</p>
-              <p>Invest $900 Earn $2700</p>
-              <p>Invest $1000 Earn $3000</p>
-              <p>Invest $2000 Earn $6000</p>
-              <p>Invest $10000 Earn $16000</p>
-              <p>Invest $20000 Earn $33000</p>
-            </div>
-          </div>
-          <button
-            id="goToPaymentButton"
-            onclick="goToDeposit()"
-            class="investButton"
-          >
-            Invest now
-          </button>
+                <div class="icons">
+             <div>
+                    <ul>
+                      <li>
+                        <p>Invest $500 Earn $1500 (Min) </p>
+                      </li>
+                      <li>
+                        <p>Invest $600 Earn $1800</p>
+                      </li>
+                      <li>
+                        <p>Invest $700 Earn $2100</p>
+                      </li>
+                      <li>
+                        <p>Invest $800 Earn $2400</p>     
+                      </li>
+                      <li>
+                        <p>Invest $900 Earn $2700</p>  
+                      </li>
+                      <li>
+                        <p>Invest $1000 Earn $3000</p>
+                      </li>
+                      <li>
+                        <p>Invest $2000 Earn $6000</p>
+                      </li>
+                      <li>
+                        <p>Invest $10000 Earn $16000</p>
+                      </li>
+                      <li>
+                        <p>Invest $20000 Earn $33000</p>
+                      </li>  
+                    
+                   
+                   
+                   
+                   
+                    
+                    
+                    
+                    
+                  </div>  
+                </div>
+
+   
+            <button id="goToPaymentButton" onclick="goToDeposit()"  class="investButton">Invest now</button>
         </div>
-      </div>
+
+    </div>     
     </section>
 
     <script>
