--- a/templates/authentication/deposit.html
+++ b/templates/authentication/deposit.html
@@ -166,10 +166,6 @@
         </div>
       </div>
 
-      {% comment %}
-      <!-- pop up--------------------------------- -->
-      {% endcomment %}
-
       <div class="popUpWindow" id="myForm">
         <div>
           <p class="request">
@@ -199,6 +195,11 @@
           </button>
         </div>
       </div>
+      {% else %}
+      <div class="please">
+      <h1 id="pleaseSignIn">Please sign in or create account.</h1>
+      <div>
+      {% endif %}
 
       <script>
         function openForm() {
@@ -215,6 +216,7 @@
 
         }
       </script>
+
       <script>
         var menuList = document.getElementById("menuList");
         menuList.style.maxHeight = "0px";
@@ -228,9 +230,5 @@
         }
       </script>
     </section>
-
-    {% else %}
-    <h1 id="pleaseSignIn">Please sign in or create account</h1>
-    {% endif %}
   </body>
 </html>
