--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -32,7 +32,10 @@
       <div class="headerDivMain" >
 
             <div class="logoContainer">
+              <div class="logoAndBalance">          
                 <a class="logo"><img src= {% static 'assets/logo.png' %} alt="logo"></a>
+                <h4>Balance: {{user.last_name}}</h4>
+              </div>
                 <i class="fas fa-bars" onclick="toggleMenu()"></i>
             </div>
 
@@ -397,16 +400,7 @@
                               </li>
                               <li>
                                 <p>Invest $20000 Earn $33000</p>
-                              </li>  
-                            
-                           
-                           
-                           
-                           
-                            
-                            
-                            
-                            
+                              </li>                            
                           </div>  
                         </div>
 
