--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/form.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/forms.css' %}" />
     <title>Sign Up</title>
   </head>
 
@@ -17,22 +17,10 @@
     <div class= "container">
 
       {% for message in messages %}
-              <div
-                class="alert alert-{{ message.tags }} alert-dismissible fade show"
-                role="alert"
-              >
-                <strong>Alert !!! </strong> {{ message }}
-                <button
-                  type="button"
-                  class="close"
-                  data-dismiss="alert"
-                  aria-label="Close"
-                >
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
+      
+      <h3 id="status" {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</h3>
+     
       {% endfor %}
-
 
       <h3>Create your account</h3>
 
@@ -101,18 +89,27 @@
               placeholder="Confirm password"
               required
             >
+            
          
           <button type="submit" class="signButton">Sign Up</button>
           <div class="already">
             <P>Already have an account?<p/>
             <a href="/signin">Login</a>
           </div>
-          
         </div>
         </form>
       </div>
       
 </section>
+
+{% comment %} <script>
+  setTimeout(function(){
+    var msg=document.getElementById("status")
+    msg.parentNode.removeChild(msg)
+  },3000)
+    
+</script> {% endcomment %}
+
 
 
   </body>
