--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -1,7 +1,8 @@
 body {
-  background-image: url("../assets/wall.jpg");
   margin: 0;
   padding: 0;
+  background-color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
 }
 section {
   display: flex;
@@ -23,7 +24,7 @@ section {
 }
 h3 {
   text-align: center;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 input {
   border-radius: 10px;
@@ -41,7 +42,8 @@ input {
 }
 p {
   font-size: 12px;
-  color: white;
+  color: rgb(0, 0, 0);
+  font-weight: 700;
 }
 a {
   font-size: 12px;
@@ -60,9 +62,34 @@ a {
   background-color: rgb(0, 196, 196);
   color: white;
 }
-.alert-dismissible {
-  color: red;
+.success {
+  color: rgb(29, 175, 0);
   align-items: center;
+  text-align: center;
+  font-weight: 700;
+}
+.error {
+  color: rgb(194, 0, 0);
+  align-items: center;
+  text-align: center;
+  font-weight: 700;
+}
+#status {
+  animation: status 5s ease forwards;
+}
+@keyframes status {
+  0% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  90% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  100% {
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 
 @media only screen and (max-width: 700px) {
@@ -74,5 +101,8 @@ a {
   }
   h3 {
     font-size: 24px;
+  }
+  #status {
+    font-size: 14px;
   }
 }
