--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -15,7 +15,7 @@
 
     <script src="https://kit.fontawesome.com/0a5c0d1ef5.js" crossorigin="anonymous"></script>
 
-    <title>Fx Binary || Home page</title>
+    <title>Az Binary || Home page</title>
 
   </head>
 
