--- a/templates/authentication/getStarted.html
+++ b/templates/authentication/getStarted.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Fx Binary || Home page</title>
+    <title>Get started</title>
   </head>
 
   <body>
