--- a/templates/authentication/signin.html
+++ b/templates/authentication/signin.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/forms.css' %}" />
-    <title>Sign Up</title>
+    <title>Signin</title>
   </head>
 
 
