--- a/templates/email_confirmation.html
+++ b/templates/email_confirmation.html
@@ -1,7 +1,7 @@
 {% autoescape off %} 
 
 Hello {{ name }}
-Welcome to Fx Binary
+Welcome to Az Binary
 Please confirm your email by clicking on the following link:
 
 http://{{domain}}{% url 'activate' uidb64=uid token=token %} 
