--- a/templates/authentication/deposit.html
+++ b/templates/authentication/deposit.html
@@ -197,7 +197,7 @@
       </div>
       {% else %}
       <div class="please">
-      <h1 id="pleaseSignIn">Please sign in or create account.</h1>
+      <h1 id="pleaseSignIn">Please sign in or create an account.</h1>
       <div>
       {% endif %}
 
