--- a/templates/authentication/account.html
+++ b/templates/authentication/account.html
@@ -192,7 +192,7 @@
 
     {% else %}
 
-    <h1 id="pleaseSignIn">Please sign in or create account</h1>
+    <h1 id="pleaseSignIn">Please sign in or create an account</h1>
 
     {% endif %}
   </body>
