--- a/templates/authentication/mpesaWithdrawal.html
+++ b/templates/authentication/mpesaWithdrawal.html
@@ -188,7 +188,7 @@
   </section>
 
     {% else %}  
-      <h1 id="pleaseSignIn" >Please sign in or create account</h1>
+      <h1 id="pleaseSignIn" >Please sign in or create an account</h1>
     {% endif %}
 
   </body>
