--- a/templates/authentication/withdraw.html
+++ b/templates/authentication/withdraw.html
@@ -219,7 +219,7 @@
       </script>
     </section>
     {% else %}
-    <h1 id="pleaseSignIn">Please sign in or create account</h1>
+    <h1 id="pleaseSignIn">Please sign in or create an account</h1>
     {% endif %}
   </body>
 </html>
