--- a/templates/authentication/account.html
+++ b/templates/authentication/account.html
@@ -65,7 +65,7 @@
           <a class="logo"
             ><img src= {% static 'assets/logo.png' %} alt="logo"></a
           >
-          <i class="fas fa-bars" onclick="toggleMenu()"></i>
+          <i class="fas fa-bars" onclick="goToSignUp()"></i>
         </div>
         <div class="menuItems" id="menuList">
           <div class="notButtons">
@@ -187,6 +187,10 @@
         } else {
           menuList.style.maxHeight = "0px";
         }
+      }
+
+      function goToSignUp() {
+        window.location = "/signup";
       }
     </script>
 
