--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -890,6 +890,7 @@ footer li {
     top: 30px;
     background-color: #000000;
     width: 100%;
+    height: 450px;
     border-radius: 0 0 30px 30px;
     justify-content: center;
   }
