--- a/templates/authentication/getStarted.html
+++ b/templates/authentication/getStarted.html
@@ -32,7 +32,7 @@
           <a class="logo"
             ><img src= {% static 'assets/logo.png' %} alt="logo"></a
           >
-          <i class="fas fa-bars" onclick="toggleMenu()"></i>
+          <i class="fas fa-bars" onclick="goToSignUp()"></i>
         </div>
 
         <div class="menuItems" id="menuList">
@@ -252,6 +252,10 @@
 
       function goToGetStarted() {
         window.location = "/getStarted";
+      }
+
+      function goToSignUp() {
+        window.location = "/signup";
       }
 
       var menuList = document.getElementById("menuList");
